# geolayoutlm

./: .gitignore  evaluate.py  inference.py  pyproject.toml  requirements.txt  train.py
GeoLayoutLM/lightning_modules/: bros_module.py
GeoLayoutLM/lightning_modules/data_modules/: vie_data_module.py  vie_dataset.py
GeoLayoutLM/model/: __init__.py  geolayoutlm_vie.py
GeoLayoutLM/preprocess/funsd_el/: preprocess.py
GeoLayoutLM/utils/: __init__.py
configs/: default.yaml  finetune_funsd.yaml
lightning_modules/: bros_module.py  geolayoutlm_vie_module.py
lightning_modules/data_modules/: vie_data_module.py  vie_dataset.py
model/: __init__.py  geolayoutlm_vie.py  utils.py
postprocess/: postprocess.py  utils.py
preprocess/: preprocess.py
preprocess/floorplan/: huggingface.py  ocr.py  preprocess.py  schemas.py  utils.py
preprocess/funsd_el/: preprocess.py
utils/: __init__.py  load_model.py  util.py
